; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_mmap.c_mmap_common.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_mmap.c_mmap_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [37 x i8] c"mmap(0x%x, 0x%x, 0x%x, 0x%x, %d, %d)\00", align 1
@_EINVAL = common dso_local global i32 0, align 4
@P_RWX = common dso_local global i64 0, align 8
@MMAP_PRIVATE = common dso_local global i64 0, align 8
@MMAP_SHARED = common dso_local global i64 0, align 8
@current = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i64, i64, i32, i64)* @mmap_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mmap_common(i32 %0, i64 %1, i64 %2, i64 %3, i32 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i32 %4, i32* %12, align 4
  store i64 %5, i64* %13, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = load i32, i32* %12, align 4
  %20 = load i64, i64* %13, align 8
  %21 = call i32 @STRACE(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %15, i64 %16, i64 %17, i64 %18, i32 %19, i64 %20)
  %22 = load i64, i64* %9, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %6
  %25 = load i32, i32* @_EINVAL, align 4
  store i32 %25, i32* %7, align 4
  br label %65

26:                                               ; preds = %6
  %27 = load i64, i64* %10, align 8
  %28 = load i64, i64* @P_RWX, align 8
  %29 = xor i64 %28, -1
  %30 = and i64 %27, %29
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* @_EINVAL, align 4
  store i32 %33, i32* %7, align 4
  br label %65

34:                                               ; preds = %26
  %35 = load i64, i64* %11, align 8
  %36 = load i64, i64* @MMAP_PRIVATE, align 8
  %37 = and i64 %35, %36
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %46

39:                                               ; preds = %34
  %40 = load i64, i64* %11, align 8
  %41 = load i64, i64* @MMAP_SHARED, align 8
  %42 = and i64 %40, %41
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %39
  %45 = load i32, i32* @_EINVAL, align 4
  store i32 %45, i32* %7, align 4
  br label %65

46:                                               ; preds = %39, %34
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = call i32 @write_wrlock(i32* %50)
  %52 = load i32, i32* %8, align 4
  %53 = load i64, i64* %9, align 8
  %54 = load i64, i64* %10, align 8
  %55 = load i64, i64* %11, align 8
  %56 = load i32, i32* %12, align 4
  %57 = load i64, i64* %13, align 8
  %58 = call i32 @do_mmap(i32 %52, i64 %53, i64 %54, i64 %55, i32 %56, i64 %57)
  store i32 %58, i32* %14, align 4
  %59 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 0
  %63 = call i32 @write_wrunlock(i32* %62)
  %64 = load i32, i32* %14, align 4
  store i32 %64, i32* %7, align 4
  br label %65

65:                                               ; preds = %46, %44, %32, %24
  %66 = load i32, i32* %7, align 4
  ret i32 %66
}

declare dso_local i32 @STRACE(i8*, i32, i64, i64, i64, i32, i64) #1

declare dso_local i32 @write_wrlock(i32*) #1

declare dso_local i32 @do_mmap(i32, i64, i64, i64, i32, i64) #1

declare dso_local i32 @write_wrunlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
